<resources>
    <string name="app_name">Chess Tree</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chess Tree</string>
    <string name="nav_header_subtitle">rowanmckee@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_chessboard">Chessboard</string>
    <string name="menu_analysis">Analysis</string>
    <string name="menu_save">Save</string>
    <string name="menu_importexport">Import/Export</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_chess_board">Chess Board</string>
    <string name="title_activity_analysis">Chess Analysis</string>
    <string name="title_activity_save">Save</string>
    <string name="title_activity_import_export">Import/Export</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_updates">Updates And Information</string>

    <string name="save_tree_as">Your Tree Name Here…</string>
    <string name="save_as">Save As</string>
    <string name="load">Select a Tree to Load</string>
    <string name="notesLabel">Notes</string>
    <string name="notesHint">Type a Note Here…</string>
    <string name="tags">tags…</string>
    <string name="export">Export</string>
    <string name="Import">Import</string>
    <string name="imported">Type text or long click here to import</string>
    <string name="sendboard">See Chess Board</string>
    <string name="bugs">Bugs</string>
    <string name="Todo">Plans</string>
    <string name="updates">Updates</string>
    <string name="inprogress">WIP</string>
    <string name="aboutme">About Me</string>

    <!--Strings associated with Settings or Config-->
    <string name="configfile">com.example.chesstree.CONFIG</string>
    <string name="inline">In-Line Notation</string>
    <string name="twocolumn">Two Column Notation</string>

    <!--Strings displayed on the Updates tab-->
    <string name="updates_">Updates!</string>
    <string name="update1">
        <b>Sunday, August 11th, 2019\n6:34pm\nUpdate #2</b>\n\n
        &#8226; Added chess board control bar\n\n
        &#8226; Added sharable PGNs from the chess board\n\n
        &#8226; Added an option to rotate the board\n\n
        &#8226; Added buttons to allow going backwards or forwards in a set of chess moves\n\n
        &#8226; Added a link to the still empty Analysis screen for later use\n\n
        &#8226; Added a link to the node any given chess board screen is associated with\n\n
        &#8226; Added a link from the node screen to its associated chess board state

        \n\n\n\n\n<b>Sunday, August 11th, 2019</b>\n
        <b>2:02am\nUpdate #1</b>\n\n
        &#8226; Added a tabbed screen to display a list of what has been done,
        what is being done, and what is in the works for the future. There\'s also a list of
        known bugs as well as a tab dedicated to getting to know the programmer (aka, me).\n\n
        &#8226; What I have accomplished up to this point includes programming a fully functioning
        chess board on the chess board screen, a fully functioning and UI intensive tree to
        keep track of chess moves in an organized manner, as well as being able to save custom
        trees to then be loaded back up later. \n\n
        &#8226; Importing games is also functioning, though
        there currently seem to be hitches in being able to import games with branching involved.
    </string>

    <!--Strings displayed on the WIP tab-->
    <string name="working">Working On</string>
    <string name="wip1">
        <b>Monday, August 12th, 2019\n2:32am\n\n</b>
        &#8226; I\'ve come to the conclusion that dropdown menus are not a viable option. I\'m going to opt for making
        a custom layout that will handle the placement of the textviews for me.

        \n\n\n\n\n<b>Sunday, August 11th, 2019\n6:26pm\n\n</b>
        &#8226; <strike>Found a new bug I think I have a solution to, so it will hopefully be resolved soon.</strike>
        (Finished 8.11.19)\n\n
        &#8226; <strike>Next thing: Formatting on the chess board screen</strike>(See 8.12.2019)

        \n\n\n\n\n<b>Sunday, August 11th, 2019\n2:13am\n\n</b>
        &#8226; <strike>Informational tabbed display screen</strike> (Finished 8.11.2019)\n\n
        &#8226; <strike>Formatting text on the chess board screen, branching moves will appear as
        drop down menus to choose from.</strike>(See 8.12.2019)\n\n
        &#8226; <strike>Playback menu on chessboard screen to allow moving forward or backwards
        moves</strike> (Finished 8.11.2019)\n\n
        &#8226; Settings and other user customizations of the app\n\n
        &#8226; Adding a drop down menu to the save screen to allow quick access for overwriting saves\n\n
        &#8226; Adding an app logo\n\n
        &#8226; Adding a way to search for specific nodes
    </string>

    <!--Strings displayed on the Plans tab-->
    <string name="planned">Planning</string>
    <string name="plan1"><b>Sunday, August 11th, 2019\n2:28am\n\n</b>
        &#8226; Analyzing a chess position or game on the Analysis screen\n\n
        &#8226; Incorporation of online chess databases\n\n
        &#8226; Advertisements to be able to monetize this app\n\n
        &#8226; In-app purchasing to further monetize the app\n\n
        &#8226; Cosmetic enhancements to the app such as better sprites, more relaxed and pleasing UI, etc.\n\n
        &#8226; Adding a place for users to provide feedback\n\n
        &#8226; Adding sound to various parts of the app where it would make sense\n\n
        &#8226; Animations
    </string>

    <!--Strings displayed on the Bugs tab-->
    <string name="knownbugs">Known Bugs</string>
    <string name="bugs1">
        <b>Sunday, August 11th, 2019\n6:17pm\n\n</b>
        &#8226; <strike>Main Screen takes a long time to load because the nodes default to expanded.</strike>
        (Fixed 8.11.19)

        \n\n\n\n\n<b>Sunday, August 11th, 2019\n4:56am\n\n</b>
        &#8226; Exporting text produces extraneous parentheses\n\n
        &#8226; The details screen for each node covers up the expandable notifications bar of the main system
    </string>

    <!--Strings displayed on the About Me tab-->
    <string name="about">About Rowan McKee</string>
    <string name="aboutme1">
        <b>Name:</b> Rowan McKee\n
        <b>Email:</b> rowanmckee@gmail.com\n
        <b>Occupation:</b> Math Tutor and Independent Android Developer\n
        <b>Discord:</b> mathfreak2#7539\n\n
        \tI\'m currently going to school for a mathematics and computer science double major, and my goal
        is to hopefully one day make a living off of making and developing games. I\'ve been in love with
        chess my whole life (my parents taught me to play at age three), and I noticed there weren\'t very
        many programs out there that you could store and analyze chess moves in a tree like structure, so
        I decided to make my own, thus Chess Tree was born. I hope you all find it as useful as I do.
    </string>

    <!--Notational strings-->
    <string name="blunder">\?\?</string>
    <string name="mistake">\?</string>
    <string name="dubious">\?!</string>
    <string name="interesting">!\?</string>
    <string name="good">!</string>
    <string name="brilliant">!!</string>
    <string name="remove"> </string>

    <string name="equal">=</string>
    <string name="slight_advantage_white">⩲</string>
    <string name="slight_advantage_black">⩱</string>
    <string name="clear_advantage_white">±</string>
    <string name="clear_advantage_black">∓</string>
    <string name="decisive_advantage_white">+ −</string>
    <string name="decisive_advantage_black">− +</string>
    <string name="unclear">∞</string>
    <string name="compensation">=/∞</string>

    <string name="better">⌓</string>
    <string name="only">□</string>
    <string name="idea">Δ</string>
    <string name="counter">∇</string>
    <string name="novelty">TN</string>

    <string name="initiative">↑</string>
    <string name="attack">→</string>
    <string name="counterplay">⇄</string>
    <string name="development">↻</string>
    <string name="space">○</string>
    <string name="time_trouble">⊕</string>
    <string name="zugzwang">⊙</string>

    <!--Testing and Error Strings for Debug purposes-->
    <string name="test">Test!</string>
    <string name="nodeerror">Node Not Found</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>