<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_chessboard"
        android:icon="@drawable/chessboard"
        android:title="@string/menu_chessboard" />
    <item
        android:id="@+id/nav_analysis"
        android:icon="@drawable/gear"
        android:title="@string/menu_analysis" />
    <item
        android:id="@+id/nav_save"
        android:icon="@drawable/save_icon"
        android:title="@string/menu_save" />
    <item
        android:id="@+id/nav_importexport"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_importexport" />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/updates"
        android:title="@string/updates" />

</menu>