<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_node"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NodeActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@id/view_move_quality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/design_default_color_primary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/view_children"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@id/view_parents"
        app:layout_constraintEnd_toStartOf="@id/view_notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hsv_other_position">

        <LinearLayout
            android:id="@+id/view_children_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ScrollView
        android:id="@+id/view_parents"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_notes"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_children">

        <LinearLayout
            android:id="@+id/view_parents_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/view_notes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_parents"
        app:layout_constraintTop_toBottomOf="@id/hsv_other_position">

        <TextView
            android:id="@+id/note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/notesLabel"
            app:layout_constraintBottom_toTopOf="@id/sv_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <ScrollView
            android:id="@+id/sv_notes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/hsv_tags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note">

            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/notesHint"
                android:inputType="textMultiLine" />
        </ScrollView>

        <HorizontalScrollView
            android:id="@+id/hsv_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_notes">

            <EditText
                android:id="@+id/tags"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/tags"
                android:inputType="text|textAutoComplete|textCapWords" />
        </HorizontalScrollView>

    </android.support.constraint.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/view_move_quality"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/view_analysis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <LinearLayout
            android:id="@+id/view_move_quality_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/remove1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/remove"
                android:text="@string/remove"
                android:textSize="18sp" />

            <Button
                android:id="@+id/blunder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/blunder" />

            <Button
                android:id="@+id/mistake"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/mistake"
                android:text="@string/mistake" />

            <Button
                android:id="@+id/dubious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/dubious"
                android:text="@string/dubious" />

            <Button
                android:id="@+id/interesting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/interesting"
                android:text="@string/interesting" />

            <Button
                android:id="@+id/good"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/good"
                android:text="@string/good" />

            <Button
                android:id="@+id/brilliant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/brilliant"
                android:text="@string/brilliant" />
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/view_analysis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/hsv_other_move"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_move_quality">

        <LinearLayout
            android:id="@+id/view_analysis_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/remove2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/remove"
                android:text="@string/remove"
                android:textSize="18sp" />

            <Button
                android:id="@+id/equal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/equal"
                android:text="@string/equal"
                android:textSize="18sp" />

            <Button
                android:id="@+id/slight_white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/slight_advantage_white"
                android:text="@string/slight_advantage_white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/slight_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/slight_advantage_black"
                android:text="@string/slight_advantage_black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/clear_white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/clear_advantage_white"
                android:text="@string/clear_advantage_white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/clear_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/clear_advantage_black"
                android:text="@string/clear_advantage_black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/decisive_white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/decisive_advantage_white"
                android:text="@string/decisive_advantage_white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/decisive_black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/decisive_advantage_black"
                android:text="@string/decisive_advantage_black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/unclear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/unclear"
                android:text="@string/unclear"
                android:textSize="18sp" />

            <Button
                android:id="@+id/compensation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/compensation"
                android:text="@string/compensation"
                android:textSize="18sp" />

        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/hsv_other_move"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/hsv_other_position"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_analysis">

        <LinearLayout
            android:id="@+id/analysis_other_move_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/remove3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/remove"
                android:text="@string/remove"
                android:textSize="18sp" />

            <Button
                android:id="@+id/better"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/better"
                android:text="@string/better"
                android:textSize="18sp" />

            <Button
                android:id="@+id/only"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/only"
                android:text="@string/only"
                android:textSize="18sp" />

            <Button
                android:id="@+id/idea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/idea"
                android:text="@string/idea"
                android:textSize="18sp" />

            <Button
                android:id="@+id/counter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/counter"
                android:text="@string/counter"
                android:textSize="18sp" />

            <Button
                android:id="@+id/novelty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/novelty"
                android:text="@string/novelty"
                android:textSize="18sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/hsv_other_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/view_children"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hsv_other_move">

        <LinearLayout
            android:id="@+id/analysis_other_position_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/remove4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/remove"
                android:text="@string/remove"
                android:textSize="18sp" />

            <Button
                android:id="@+id/initiative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/initiative"
                android:text="@string/initiative"
                android:textSize="18sp" />

            <Button
                android:id="@+id/attack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/attack"
                android:text="@string/attack"
                android:textSize="18sp" />

            <Button
                android:id="@+id/counterplay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/counterplay"
                android:text="@string/counterplay"
                android:textSize="18sp" />

            <Button
                android:id="@+id/development"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/development"
                android:text="@string/development"
                android:textSize="18sp" />

            <Button
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/space"
                android:text="@string/space"
                android:textSize="18sp" />

            <Button
                android:id="@+id/time_trouble"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/time_trouble"
                android:text="@string/time_trouble"
                android:textSize="18sp" />

            <Button
                android:id="@+id/zugzwang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/zugzwang"
                android:text="@string/zugzwang"
                android:textSize="18sp" />
        </LinearLayout>
    </HorizontalScrollView>
</android.support.constraint.ConstraintLayout>